2012-05-29 Graeme Gott <graeme@gottcode.org>
	* Remove Qtopia support.

2010-10-02 Graeme Gott <graeme@gottcode.org>
	* Tag version 1.0.4.

2010-09-26 Graeme Gott <graeme@gottcode.org>
	* Switch to using QTimers.
	* Draw piece separately from board.

2010-09-25 Graeme Gott <graeme@gottcode.org>
	* Add click to start or resume games.

2010-09-24 Graeme Gott <graeme@gottcode.org>
	* Cache board rectangle and piece size.
	* Prompt before ending a game.

2010-09-23 Graeme Gott <graeme@gottcode.org>
	* Allow changing bindir during configuration.
	* Hide cursor when playing a game.
	* FIXED: Rotating a square piece shifted it.

2008-06-18 Graeme Gott <graeme@gottcode.org>
	* Tag version 1.0.3.

2008-06-17 Graeme Gott <graeme@gottcode.org>
	* FIXED: Binary not installed with make install.

2008-06-16 Graeme Gott <graeme@gottcode.org>
	* Tag version 1.0.2.

2008-06-09 Graeme Gott <graeme@gottcode.org>
	* FIXED: Top row was duplicated when other rows were removed.

2008-05-31 Alessandro Briosi <tsdogs@briosix.org>
	* Ported to Qtopia4.

2008-05-26 Graeme Gott <graeme@gottcode.org>
	* Remember size of scoreboard.

2008-05-24 Graeme Gott <graeme@gottcode.org>
	* Tag version 1.0.1.
	* FIXED: Falling pieces became jerky at higher levels.
	* FIXED: Rotating pieces on left edge would get them stuck.

2008-05-14 Graeme Gott <graeme@gottcode.org>
	* Tag version 1.0.
	* Add program name.

2008-05-13 Graeme Gott <graeme@gottcode.org>
	* Add icon.
	* Add about menu items.
	* Pause game when it loses focus.

2008-05-12 Graeme Gott <graeme@gottcode.org>
	* Add high score board.
	* Show score.
	* Show what level you are on.
	* Show lines removed.
	* Show next piece.

2008-05-11 Graeme Gott <graeme@gottcode.org>
	* Draw tiles on the fly.
	* Remember window size and position.
	* Add pause logic.
	* Add new game logic.
	* Add game over logic.
	* Add window class.
	* Scale board when resized.
	* FIXED: Board didn't shift down when a line was removed.