@@ -1,6 +1,6 @@
 /***********************************************************************
  *
- * Copyright (C) 2007, 2008, 2012 Graeme Gott <graeme@gottcode.org>
+ * Copyright (C) 2010, 2011, 2012 Graeme Gott <graeme@gottcode.org>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,23 +17,34 @@
  *
  ***********************************************************************/
 
-#include "locale_dialog.h"
-#include "window.h"
+#ifndef LOCALE_DIALOG_H
+#define LOCALE_DIALOG_H
 
-#include <QApplication>
+#include <QDialog>
+class QComboBox;
 
-int main(int argc, char** argv)
+class LocaleDialog : public QDialog
 {
-	QApplication app(argc, argv);
-	app.setApplicationName("Gottet");
-	app.setApplicationVersion(VERSIONSTR);
-	app.setOrganizationDomain("gottcode.org");
-	app.setOrganizationName("GottCode");
+	Q_OBJECT
 
-	LocaleDialog::loadTranslator("gottet_");
+public:
+	LocaleDialog(QWidget* parent = 0);
 
-	Window window;
-	window.show();
+	static void loadTranslator(const QString& appname);
+	static QString languageName(const QString& language);
 
-	return app.exec();
-}
+public slots:
+	virtual void accept();
+
+private:
+	static QStringList findTranslations();
+
+private:
+	QComboBox* m_translations;
+
+	static QString m_current;
+	static QString m_path;
+	static QString m_appname;
+};
+
+#endif
