@@ -1,4 +1,5 @@
 2012-05-29 Graeme Gott <graeme@gottcode.org>
+	* Add locale dialog.
 	* Remove Qtopia support.
 
 2010-10-02 Graeme Gott <graeme@gottcode.org>
